# WhitelistCensor-Client

./: .env.default  .gitignore  README.md  main.py  pyproject.toml  thunder-collection.json
.github/workflows/: ci.yml
censor_client/: app.py  controller.py  errors.py  main.py  models.py  twitch_utils.py  websocket_utils.py
tests/censor_client_unit/: test_censor_function.py
